added status bar labels

--- a/src/uiwindow.ui
+++ b/src/uiwindow.ui
@@ -20,7 +20,7 @@
    <enum>Qt::DefaultContextMenu</enum>
   </property>
   <property name="windowTitle">
-   <string>UIWindow</string>
+   <string>iTraffic</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QVBoxLayout" name="verticalLayout">
